date overlapping fixed

--- a/css/style_dispwindow.css
+++ b/css/style_dispwindow.css
@@ -33,7 +33,7 @@ nav{
 
 .date{
     height: 80px;
-    width: 400px;
+    width: 415px;
     color: var(--color);
     position: relative;
     font-family: 'Klee One', cursive;
